--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 Wrapper / guts:
-- Implement global function wrapping
+- Implement global function wrapping ==> Seems done, needs lots of refactoring and testing
 - Implement method caching
 - Implement can()
 - Fix Color_t lookup and other primitive types
@@ -20,6 +20,7 @@ Wrapper / guts:
      The above C code could become: "$gRandom->(...)".
   ====> While mostly implemented now, this still fails on the const qualifier. Doh.
 - Either lose the silly overloading or add string overloading to get the refaddr
+  (If so, add bool overloading, too)
 
 Packaging:
 - Investigate ROOT's build system and how SOOT could be integrated
@@ -28,6 +29,7 @@ Packaging:
   => Inline dependencies (Done)
   => Make inlined dependencies work! (Probably takes a conversion to
      Module::Build!)
+- Fix generation of src.so
 
 Documentation / UI:
 - Convert more examples and fix the ensuing madness.
@@ -42,3 +44,24 @@ Testing:
 => joincproto and friends
 => global variable tools
 
+
+BUGS:
+- delete doesn't work as expected:
+$ $g = TGraph->new(1, [1.],[1.])
+$TGraph1 = \do { my $v = 79536896 };
+bless( $TGraph1, 'TGraph' );
+$ $g2 = $g->as('TGraph')
+$TGraph1 = \do { my $v = 79536896 };
+bless( $TGraph1, 'TGraph' );
+$ $g3 = $g->as('TGraph')
+$TGraph1 = \do { my $v = 79536896 };
+bless( $TGraph1, 'TGraph' );
+$ $g3->delete;
+$ $g3
+INT
+$ print Dumper $g
+$VAR1 = bless( do{\(my $o = 79536896)}, 'TGraph' );
+$ print Dumper $g2
+$VAR1 = bless( do{\(my $o = 79536896)}, 'TGraph' );
+$ print Dumper $g3
+Runtime error: Bizarre copy of IO in anonlist at /usr/local/lib/perl/5.10.0/Data/Dumper.pm line 553.
