--- a/lib/SOOT/Examples/Basic.pod
+++ b/lib/SOOT/Examples/Basic.pod
@@ -2113,7 +2113,7 @@ This is a listing of all SOOT examples for Basic.
     }
     printf(" %8.3f",$sw->CpuTime()*$cpn);
   
-    $gRandom->($r3); # FIXME Copy constructors or similar (see TODO)
+    $gRandom->($r3); # FIXME Assignment operators or similar (see TODO)
     $sw->Start();
     for (0..N-1) {
        $x = $f1->GetRandom();
